{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 316,
  "lineage": "0c3f1ee9-2482-ebe4-05da-4a9915d10512",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0acc3d12a8ec9775b",
            "arn": "arn:aws:ec2:us-east-1:339713157838:elastic-ip/eipalloc-0acc3d12a8ec9775b",
            "domain": "vpc",
            "id": "eipalloc-0acc3d12a8ec9775b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-200-149-197.compute-1.amazonaws.com",
            "public_ip": "34.200.149.197",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpv1-nat-eip"
            },
            "tags_all": {
              "Name": "vpv1-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4af57f07f928236",
            "arn": "arn:aws:ec2:us-east-1:339713157838:elastic-ip/eipalloc-0d4af57f07f928236",
            "domain": "vpc",
            "id": "eipalloc-0d4af57f07f928236",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-237-120-174.compute-1.amazonaws.com",
            "public_ip": "54.237.120.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpv1-nat-eip"
            },
            "tags_all": {
              "Name": "vpv1-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c104f6f4a5d9d1d5",
            "arn": "arn:aws:ec2:us-east-1:339713157838:instance/i-08b785f2b075a898c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b785f2b075a898c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c64c6f046d5f61f3",
            "private_dns": "ip-10-0-1-227.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.227",
            "public_dns": "ec2-44-205-17-44.compute-1.amazonaws.com",
            "public_ip": "44.205.17.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07c6d81e90747ffa2",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0945d344828e83563",
            "tags": {
              "Name": "vpv1-bastion"
            },
            "tags_all": {
              "Name": "vpv1-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1c991e1ad2ef906"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.bastion",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713157838:internet-gateway/igw-00c9fbd6b2fda9750",
            "id": "igw-00c9fbd6b2fda9750",
            "owner_id": "339713157838",
            "tags": {
              "Name": "vpv1-igw"
            },
            "tags_all": {
              "Name": "vpv1-igw"
            },
            "vpc_id": "vpc-01011ce176bfc6b0c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0acc3d12a8ec9775b",
            "association_id": "eipassoc-05d16a5c248b1f4f1",
            "connectivity_type": "public",
            "id": "nat-0957602121538ba7e",
            "network_interface_id": "eni-0cb7d56bd408ba8eb",
            "private_ip": "10.0.1.10",
            "public_ip": "34.200.149.197",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0945d344828e83563",
            "tags": {
              "Name": "vpv1-ngw-0"
            },
            "tags_all": {
              "Name": "vpv1-ngw-0"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4af57f07f928236",
            "association_id": "eipassoc-0bd07275407695706",
            "connectivity_type": "public",
            "id": "nat-0a6e39ab0419e508c",
            "network_interface_id": "eni-073f82638666d77d4",
            "private_ip": "10.0.2.249",
            "public_ip": "54.237.120.174",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b9ed8e98a18cd5b1",
            "tags": {
              "Name": "vpv1-ngw-1"
            },
            "tags_all": {
              "Name": "vpv1-ngw-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04aafe0d1aab5556d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0957602121538ba7e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04aafe0d1aab5556d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.rtb_private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-035b0b390a0cc60a61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a6e39ab0419e508c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035b0b390a0cc60a6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.rtb_private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00c9fbd6b2fda9750",
            "id": "r-rtb-0bee3d66c31d598721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bee3d66c31d59872",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713157838:route-table/rtb-04aafe0d1aab5556d",
            "id": "rtb-04aafe0d1aab5556d",
            "owner_id": "339713157838",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpv1-rtb-private-0"
            },
            "tags_all": {
              "Name": "vpv1-rtb-private-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-01011ce176bfc6b0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713157838:route-table/rtb-035b0b390a0cc60a6",
            "id": "rtb-035b0b390a0cc60a6",
            "owner_id": "339713157838",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpv1-rtb-private-1"
            },
            "tags_all": {
              "Name": "vpv1-rtb-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01011ce176bfc6b0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713157838:route-table/rtb-0bee3d66c31d59872",
            "id": "rtb-0bee3d66c31d59872",
            "owner_id": "339713157838",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpv1-rtb-public"
            },
            "tags_all": {
              "Name": "vpv1-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01011ce176bfc6b0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtbassoc-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad2a16d613a839b7",
            "route_table_id": "rtb-04aafe0d1aab5556d",
            "subnet_id": "subnet-0b654d2cc76c77e7f"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.rtb_private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b343ab4d876b80b",
            "route_table_id": "rtb-035b0b390a0cc60a6",
            "subnet_id": "subnet-0ca3a4a01f4bf83b5"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.rtb_private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtbassoc-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004459267e071b38d",
            "route_table_id": "rtb-0bee3d66c31d59872",
            "subnet_id": "subnet-0945d344828e83563"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec223609f77d8206",
            "route_table_id": "rtb-0bee3d66c31d59872",
            "subnet_id": "subnet-0b9ed8e98a18cd5b1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713157838:security-group/sg-0a1c991e1ad2ef906",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a1c991e1ad2ef906",
            "ingress": [],
            "name": "vpv1-sg-bastion-allow",
            "name_prefix": "",
            "owner_id": "339713157838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpv1-sg-bastion-allow"
            },
            "tags_all": {
              "Name": "vpv1-sg-bastion-allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-01011ce176bfc6b0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_allow_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all traffic egress from bastion EC2 instance.",
            "from_port": 0,
            "id": "sgrule-3300926489",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a1c991e1ad2ef906",
            "security_group_rule_id": "sgr-0592a7d7a7398f722",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713157838:subnet/subnet-0b654d2cc76c77e7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b654d2cc76c77e7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713157838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpv1-private-us-east-1a"
            },
            "tags_all": {
              "Name": "vpv1-private-us-east-1a"
            },
            "vpc_id": "vpc-01011ce176bfc6b0c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713157838:subnet/subnet-0ca3a4a01f4bf83b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca3a4a01f4bf83b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713157838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpv1-private-us-east-1b"
            },
            "tags_all": {
              "Name": "vpv1-private-us-east-1b"
            },
            "vpc_id": "vpc-01011ce176bfc6b0c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713157838:subnet/subnet-0945d344828e83563",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0945d344828e83563",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713157838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpv1-public-us-east-1a"
            },
            "tags_all": {
              "Name": "vpv1-public-us-east-1a"
            },
            "vpc_id": "vpc-01011ce176bfc6b0c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713157838:subnet/subnet-0b9ed8e98a18cd5b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9ed8e98a18cd5b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713157838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpv1-public-us-east-1b"
            },
            "tags_all": {
              "Name": "vpv1-public-us-east-1b"
            },
            "vpc_id": "vpc-01011ce176bfc6b0c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713157838:vpc/vpc-01011ce176bfc6b0c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d72de13bf9ac71dd",
            "default_route_table_id": "rtb-052a9916b93ce408f",
            "default_security_group_id": "sg-0e9255cb155884e5d",
            "dhcp_options_id": "dopt-002f92afef28a7259",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01011ce176bfc6b0c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052a9916b93ce408f",
            "owner_id": "339713157838",
            "tags": {
              "Name": "vpv1-vpc"
            },
            "tags_all": {
              "Name": "vpv1-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713157838:vpc-endpoint/vpce-09e6f3c9be15907ff",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-09e6f3c9be15907ff",
            "owner_id": "339713157838",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "vpv1-s3-vpc-endpoint",
              "type": "gateway"
            },
            "tags_all": {
              "Name": "vpv1-s3-vpc-endpoint",
              "type": "gateway"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-01011ce176bfc6b0c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_vpc_endpoint_service.s3_endpoint"
          ]
        }
      ]
    }
  ]
}